Cycles+OSL keeps image files open until Blender exits #47201

Closed
opened 2016-01-18 08:47:34 +01:00 by Yury Baranov · 8 comments

System Information
Windows 7 64-bit
GeForce GT420

Blender Version
2.76b f337fea

Short description of error
If viewport switched to rendered mode, it's unable to edit and rewrite texture file using Photoshop.

Exact steps for others to reproduce the error

  1. Open bug.blend
  2. Switch viewport mode to "rendered".
  3. Open WoodPlanksOld0176_2_S_bak.jpg in Photoshop, edit it and try to save the file.
    texture_bug.zip
**System Information** Windows 7 64-bit GeForce GT420 **Blender Version** 2.76b f337fea **Short description of error** If viewport switched to rendered mode, it's unable to edit and rewrite texture file using Photoshop. **Exact steps for others to reproduce the error** 1. Open bug.blend 2. Switch viewport mode to "rendered". 3. Open WoodPlanksOld0176_2_S_bak.jpg in Photoshop, edit it and try to save the file. [texture_bug.zip](https://archive.blender.org/developer/F275078/texture_bug.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YuryBaranov

Added subscriber: @YuryBaranov
Author

Strange behavior - Krita save file correctly without any warnings/errors.

Strange behavior - Krita save file correctly without any warnings/errors.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

When OSL is enabled, image files aren't being closed. (happens on Linux too, this just prevents others from writing to them on Windows.)

Note that this happens for regular renders too.

When OSL is enabled, image files aren't being closed. (happens on Linux too, this just prevents others from writing to them on Windows.) Note that this happens for regular renders too.
Campbell Barton changed title from Cycles viewport preview locks texture file on win64 to Cycles+OSL keeps image files open until Blender exits 2016-01-19 04:40:56 +01:00

This issue was referenced by d44ea880ea

This issue was referenced by d44ea880ea447ff5c7bf05af83f533901f9c12d6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@72f86828c8

This issue was referenced by blender/cycles@72f86828c8b4d7128102b3d7f0463ba21efbabd8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47201
No description provided.