Fix T47201: Cycles+OSL keeps image files open until Blender exits

Now image will be opened for while render session is active, this is
needed to keep image cache working correctly. But stopping render
should now release all files descriptors.